# l1-t3-FallingWords

./: CMakeLists.txt  Teste.c  buttons.c  buttons.h  clipboard  exemplo  gravidade.c  gravidade.h  l1-t3-jvrates.c  normaliza_pal.c  npal-al.txt  npal-qp.txt  p  pal-al.txt  pal-qp.txt  pal-zm.txt  score  score_lvl1  tela.c  tela.h  teste  teste.c  trabalho3.c
pal/: pal-qp.txt
